--- a/web/index.html
+++ b/web/index.html
@@ -29,10 +29,33 @@
   <!-- Favicon -->
   <link rel="icon" type="image/png" href="favicon.png"/>
 
-  <title>waterapp</title>
+  <title>Aquaview</title>
   <link rel="manifest" href="manifest.json">
 </head>
 <body>
+  <script type="module">
+  // Import the functions you need from the SDKs you need
+  import { initializeApp } from "https://www.gstatic.com/firebasejs/11.10.0/firebase-app.js";
+  import { getAnalytics } from "https://www.gstatic.com/firebasejs/11.10.0/firebase-analytics.js";
+  // TODO: Add SDKs for Firebase products that you want to use
+  // https://firebase.google.com/docs/web/setup#available-libraries
+
+  // Your web app's Firebase configuration
+  // For Firebase JS SDK v7.20.0 and later, measurementId is optional
+  const firebaseConfig = {
+    apiKey: "AIzaSyBOlFT-F_DzypxBCUhmgBWLII1pK17n59U",
+    authDomain: "wqms-3428e.firebaseapp.com",
+    projectId: "wqms-3428e",
+    storageBucket: "wqms-3428e.firebasestorage.app",
+    messagingSenderId: "266824109930",
+    appId: "1:266824109930:web:256d3f61fe8011075b5f13",
+    measurementId: "G-LE3Z5N1XVT"
+  };
+
+  // Initialize Firebase
+  const app = initializeApp(firebaseConfig);
+  const analytics = getAnalytics(app);
+</script>
   <script src="flutter_bootstrap.js" async></script>
 </body>
 </html>
